--- a/package.json
+++ b/package.json
@@ -20,21 +20,27 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.0",
     "@nestjs/typeorm": "^10.0.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
     "bcrypt": "^5.1.1",
+    "bull": "^4.12.2",
     "cookie-parser": "^1.4.6",
+    "ioredis": "^5.3.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.7.0",
+    "nestjs-redis": "github:skunight/nestjs-redis",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "redis": "^4.6.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.19"
